5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1723_2507.log
== TEST (2019-05-14 11:41:09) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1
if (qip<0):
	print("ZERO")
if (qip>8000)

print(m)
-- ERROR:
File "XXXX", line 13
    if (qip>8000)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:26) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1
if (qip<0):
	print("ZERO")
if (qip>8000):
	print("MAXIMO")

print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:45:43) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1
	prv = int(input("digite o valor: "))
if (qip<0):
	print("ZERO")
if (qip>8000):
	print("MAXIMO")

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    prv = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:06) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1
	prv = int(input("digite o valor: "))
if (qip<0):
	print("ZERO")
if (qip>8000):
	print("MAXIMO")

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    prv = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:13) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1

if (qip<0):
	print("ZERO")
elif (qip>8000):
	print("MAXIMO")
else:
	prv = int(input("digite o valor: "))

print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:29) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1

if (qip<0):
	print("ZERO")
elif (qip>8000):
	print("MAXIMO")
else:
	prv = int(input("digite o valor: "))

print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:50:37) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1

if (qip<=0):
	print("ZERO")
elif (qip>=8000):
	print("MAXIMO")
else:
	prv = int(input("digite o valor: "))

print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:52:38) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1

if (qip<=0):
	print("ZERO")
elif (qip>=8000):
	print("MAXIMO")
else:
	prv = int(input("digite o valor: "))

print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:54:21) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1
	if (qip>=8000):
		print("MAXIMO")
	elif (qip<=0):
		print("ZERO")
	else:
		prv = int(input("digite o valor: "))

print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:54:36) 
-- CODE:
qip = int(input("digite o valor: "))
pcm = int(input("digite o valor: "))
prv = int(input("digite o valor: "))

perpcm = pcm/100
m = 0

while ((qip>0) and (qip<8000)):
	qip = qip + (qip*perpcm) - prv
	m = m + 1
	if (qip>=8000):
		print("MAXIMO")
	elif (qip<=0):
		print("ZERO")
	else:
		prv = int(input("digite o valor: "))

print(m)
-- EXECUTION TIME:
0.132285
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
